--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,22 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iniciar Sesion/Registrarse</title>
-  <button class="back-button"><a routerLink="/home">Volver</a></button>
+  <title>Iniciar Sesión/Registrarse</title>
+  <!-- Puedes agregar aquí tus archivos de CSS -->
 </head>
 <body>
+  <button class="back-button"><a routerLink="/home">Volver</a></button>
   <div class="container">
     <img src="Biblio.png" alt="Logo Discord">
     <div>
       <h2>Bienvenido de nuevo</h2>
       <form action="#">
-        <input type="text" name="email" placeholder="Correo electrónico">
+        <input type="text" name="username" placeholder="Usuario">
         <input type="password" name="password" placeholder="Contraseña">
-        <input type="submit" value="Ingresar"><a routerLink="/dashboard"></a>
+        <input type="submit" value="Ingresar">
+        <a routerLink="/dashboard"></a>
       </form>
       <p>¿Necesitas una cuenta? <a routerLink="/registro">Regístrate</a></p>
     </div>
   </div>
 </body>
 </html>
-
